# agent-context-kit

./: .gitignore  CLAUDE.md  README.md  context-engineering-reference.md  pyproject.toml
docs/: best-practices.md
examples/long_conversation/: run.py
examples/multi_skill_support/: run.py
examples/multi_skill_support/skills/: billing.md  returns.md  shipping.md
examples/research_assistant/: run.py
src/agent_context_kit/: __init__.py  managed_runner.py  observability.py  tokens.py
src/agent_context_kit/compress/: __init__.py  compactor.py  strategies.py  summarizer.py
src/agent_context_kit/context/: __init__.py  budget.py  history.py  memory.py  window.py
src/agent_context_kit/isolate/: __init__.py  delegate.py  planner.py
src/agent_context_kit/skills/: __init__.py  loader.py  router.py  skill.py
tests/: test_smoke.py
